# clerk-fapi-rs

./: Cargo.toml  README.md  fapi_swagger.json
examples/: Cargo.toml  basic_usage_sign_in.rs  basic_usage_sign_up.rs
examples/dioxus-example/: Cargo.toml
examples/src/: lib.rs
src/: clerk.rs  clerk_fapi.rs  clerk_http_client.rs  configuration.rs
src/apis/: active_sessions_api.rs  api_keys_api.rs  backup_codes_api.rs  billing_api.rs  client_api.rs  configuration.rs  default_api.rs  dev_browser_api.rs  domains_api.rs  email_addresses_api.rs  environment_api.rs  external_accounts_api.rs  health_api.rs  invitations_api.rs  members_api.rs  membership_requests_api.rs  mod.rs  o_auth2_callbacks_api.rs  o_auth2_identity_provider_api.rs  organization_api.rs  organizations_memberships_api.rs  passkeys_api.rs  phone_numbers_api.rs  redirect_api.rs  roles_api.rs  saml_api.rs  sessions_api.rs  sign_ins_api.rs  sign_ups_api.rs  totp_api.rs  user_api.rs  waitlist_api.rs  web3_wallets_api.rs  well_known_api.rs
src/models/: backup_codes.rs  billing_fee.rs  billing_money_response.rs  billing_payee.rs  billing_payer.rs  billing_payment_attempt.rs  billing_payment_method.rs  billing_payment_method_initialize.rs  billing_plan.rs  billing_plan_features_inner.rs  billing_statement.rs  billing_statement_response_group.rs  billing_statement_totals_response.rs  billing_subscription.rs  billing_subscription_credit_response.rs  billing_subscription_item.rs  billing_subscription_item_next_payment.rs  billing_subscription_next_payment.rs  clerk_error.rs  clerk_errors.rs  (+211 more)
tests/: clerk_tests.rs
(+1 files in other folders)
